[package]
name = "ripemd"
version = "0.2.0-rc.3"
description = "Pure Rust implementation of the RIPEMD hash functions"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/ripemd"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["ripemd", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.11.0-rc.5"

[dev-dependencies]
digest = { version = "0.11.0-rc.5", features = ["dev"] }
hex-literal = "1"
base16ct = { version = "0.3", features = ["alloc"] }

[features]
default = ["alloc", "oid"]
alloc = ["digest/alloc"]
oid = ["digest/oid"]
zeroize = ["digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
