[package]
name = "ripemd"
version = "0.2.0-rc.5"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/ripemd"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "MIT OR Apache-2.0"
keywords = ["ripemd", "hash", "digest"]
categories = ["cryptography", "no-std"]
description = "Pure Rust implementation of the RIPEMD hash functions"

[dependencies]
digest = "0.11"

[dev-dependencies]
digest = { version = "0.11", features = ["dev"] }
hex-literal = "1"

[features]
default = ["alloc", "oid"]
alloc = ["digest/alloc"]
oid = ["digest/oid"]
zeroize = ["digest/zeroize"]

[package.metadata.docs.rs]
all-features = true
