[package]
name = "ripemd160"
version = "0.7.0"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "RIPEMD-160 hash function"
documentation = "https://docs.rs/ripemd160"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "ripemd160", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.7"
byte-tools = "0.2"
block-buffer = "0.3"

[dev-dependencies]
digest = { version = "^0.7.1", features = ["dev"] }

[badges]
travis-ci = { repository = "RustCrypto/hashes" }
