[package]
name = "ripemd256"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["crypto", "ripemd256", "hash", "digest"]
categories = ["cryptography", "no-std"]
description = "RIPEMD-256 hash function"
repository = "https://github.com/RustCrypto/hashes"


[dependencies]
block-buffer = "0.9"
digest = "0.9"
opaque-debug = "0.3"

[dev-dependencies]
digest = { version = "0.9", features = ["dev"] }
hex-literal = "0.2"

[features]
default = ["std"]
std = ["digest/std"]
