[package]
name = "ripemd320"
version = "0.9.0-pre"
description = "RIPEMD-320 hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/ripemd320"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "ripemd320", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.9"
block-buffer = "0.9"
opaque-debug = "0.3"

[dev-dependencies]
digest = { version = "0.9", features = ["dev"] }
hex-literal = "0.2"

[features]
default = ["std"]
std = ["digest/std"]
