[package]
name = "sha1-checked"
version = "0.11.0-rc.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/sha1-checked"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "MIT OR Apache-2.0"
keywords = ["sha1", "hash", "digest"]
categories = ["cryptography", "no-std"]
description = "SHA-1 hash function with collision detection"

exclude = [
    "sha1-checked/tests/data/shattered-1.pdf",
    "sha1-checked/tests/data/shattered-2.pdf",
]

[dependencies]
digest = "0.11"
sha1 = { version = "0.11.0-rc.5", default-features = false }
zeroize = { version = "1.8", default-features = false, optional = true }

[dev-dependencies]
digest = { version = "0.11", features = ["dev"] }
hex-literal = "1"

[features]
default = ["alloc", "oid"]
alloc = ["digest/alloc", "sha1/alloc"]
oid = ["digest/oid", "sha1/oid"] # Enable OID support
zeroize = ["dep:zeroize"]


[package.metadata.docs.rs]
all-features = true
