[package]
name = "sha1"
version = "0.11.0-rc.5"
description = "SHA-1 hash function"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/sha1"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["sha1", "hash", "digest"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = "0.11"
cfg-if = "1.0"

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86", target_arch = "x86_64"))'.dependencies]
cpufeatures = "0.3"

[dev-dependencies]
digest = { version = "0.11", features = ["dev"] }
hex-literal = "1"

[features]
default = ["alloc", "oid"]
alloc = ["digest/alloc"]
oid = ["digest/oid"] # Enable OID support
zeroize = ["digest/zeroize"]
force-soft = [] # Force software implementation

[package.metadata.docs.rs]
all-features = true
