[package]
name = "sha1"
version = "0.11.0"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/sha1"
readme = "README.md"
repository = "https://github.com/RustCrypto/hashes"
license = "MIT OR Apache-2.0"
keywords = ["sha1", "hash", "digest"]
categories = ["cryptography", "no-std"]
description = "SHA-1 hash function"

[dependencies]
digest = "0.11"
cfg-if = "1.0"

[target.'cfg(any(target_arch = "aarch64", target_arch = "x86", target_arch = "x86_64"))'.dependencies]
cpufeatures = "0.3"

[dev-dependencies]
digest = { version = "0.11", features = ["dev"] }
hex-literal = "1"

[features]
default = ["alloc", "oid"]
alloc = ["digest/alloc"]
oid = ["digest/oid"] # Enable OID support
zeroize = ["digest/zeroize"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(sha1_backend, values("aarch64-sha2", "x86-sha", "soft"))'] }

[package.metadata.docs.rs]
all-features = true
